ulepsavanje contenta biografije

--- a/index.html
+++ b/index.html
@@ -36,21 +36,39 @@
         
         <div class="biografija-content">
             <div class="line2"></div>
-            <div class="nabrajanje">
-                 <p>
-                    У то време, српски језик је био мешавина црквенословенског, руског и српског. Обичан народ, међутим, није разумео кнјиге (нити је био писмен), јер су биле писане на језику који се више није користио. Од 1814. до 1852. године Вук објављује више важних и утицајних дела:
-                    1814 – „Мала простонародна славено-сербска пјеснарица“, као и прву граматику српског језика
-                    1818 – први речник српског језика, садржао је око 26 000 речи, а на немачки и латински језик, речник је превео Јернеј. Садржала је псовке и то јој је била главна критика. У овом речнику Вук такође уводи нова слова: Ј, Ђ, Ћ, Љ, Њ и Џ
-                    1819 – превео је Ноби завјет на српски1823 – у Лајпцигу објављује 3 књиге српских народних умотворина.
-                    1836 – „Српске народне пословице“
-                    1847 – Година Вукове победе, издају се:
-                        • Превод „Новог завјета“ из 1819
-                        • Ђуро Даничић – „рат за српски језик и правопис“
-                        • „Песме“ Бранк Радичевића
-                        • П.П. Његош – „Горски Вијенац“
-                    1852 – Други речник, који је имао чак 47 500 речи
-                    Вук Стефановић Караџић био је реформатор, лексикограф, сакупљач народних умотворина, историчар, учитељ и љубитељ свог народа. Вук је својим радом поставио темеље модерног српског језика, књижевности, образовања и културе. Умро је 1864, пре него што је могао и да види сопствену победу. Четири године касније је званично победио.
-                </p>
+            <p>
+                У то време, српски језик је био мешавина црквенословенског, руског и српског. Обичан народ, међутим, није разумео кнјиге (нити је био писмен), јер су биле писане на језику који се више није користио. Од 1814. до 1852. године Вук објављује више важних и утицајних дела:
+            </p>
+        </div>
+
+        <div class="biografija-nabrajanje">
+            <div class="linija">
+                <div class="dot"></div>
+                <p>1814 – „Мала простонародна славено-сербска пјеснарица“, као и прву граматику српског језика</p>
+            </div>
+            <div class="linija">
+                <div class="dot"></div>
+                <p>1818 – први речник српског језика, садржао је око 26 000 речи, а на немачки и латински језик, речник је превео Јернеј. Садржала је псовке и то јој је била главна критика. У овом речнику Вук такође уводи нова слова: Ј, Ђ, Ћ, Љ, Њ и Џ</p>
+            </div>
+            <div class="linija">
+                <div class="dot"></div>
+                <p>1819 – превео је Нови завјет на српски1823 – у Лајпцигу објављује 3 књиге српских народних умотворина.</p>
+            </div>
+            <div class="linija">
+                <div class="dot"></div>
+                <p>1836 – „Српске народне пословице“</p>
+            </div>
+            <div class="linija">
+                <div class="dot"></div>
+                <p>1847 – Година Вукове победе, издају се:<br>
+                &emsp;• Превод „Новог завјета“ из 1819<br>
+                &emsp;• Ђуро Даничић – „рат за српски језик и правопис“<br>
+                &emsp;• „Песме“ Бранк Радичевића<br>
+                &emsp;• П.П. Његош – „Горски Вијенац“<br></p>
+            </div>
+            <div class="linija">
+                <div class="dot"></div>
+                <p>1852 – Други речник, који је имао чак 47 500 речи</p>
             </div>
         </div>
     </body>
