dodavanje linka za druge teme

--- a/index.html
+++ b/index.html
@@ -78,5 +78,28 @@
                 </p>
             </div>
         </div>
+
+        <div class="seperator">
+            <div class="line1"></div>
+        </div>
+
+        <div class="okvir">
+            <h2>Druge teme</h2>
+            
+            <div class="meni">
+                <div class="image-box">
+                    <h3>Vuk kao leksikograf</h3>
+                    <a href="./Vuk-kao-leksikograf.html"><img src="./assets/slika2.png" class="image-meni"></a>
+                </div>
+                <div class="image-box">
+                    <h3>Vuk kao sakuplaj narodnih umotvorina</h3>
+                    <a href="./Vuk-kao-sakupljac-narodnih-umotvorina.html"><img src="./assets/slika3.png" class="image-meni"></a>
+                </div>
+                <div class="image-box">
+                    <h3>Vuk kao pisac i istorijoraf</h3>
+                    <a href="./Vuk-kao-pisac-i-istorijograf.html"><img src="./assets/slika4.png" class="image-meni"></a>
+                </div>
+            </div>
+        </div>
     </body>
     </html>
