dodavanje dela za skidanje

--- a/index.html
+++ b/index.html
@@ -96,9 +96,29 @@
                     <a href="./Vuk-kao-sakupljac-narodnih-umotvorina.html"><img src="./assets/slika3.png" class="image-meni"></a>
                 </div>
                 <div class="image-box">
-                    <h3>Vuk kao pisac i istorijoraf</h3>
+                    <h3>Vuk kao pisac i istorijograf</h3>
                     <a href="./Vuk-kao-pisac-i-istorijograf.html"><img src="./assets/slika4.png" class="image-meni"></a>
                 </div>
+            </div>
+        </div>
+
+        <div class="seperator">
+            <div class="line1"></div>
+        </div>
+
+        <div class="okvir">
+            <h2>Skidanje fajlova</h2>
+
+            <div class="biografija-content">
+                <div class="dot"></div>
+                <a href="./assets/Vuk-kao-sakupljac-narodnih-umotvorina.jpg" download>
+                    <p>Vuk kao sakupljac narodnih umotvorina, radili: Jovana Radjenovic, Jelena Prokic, Matija Plemic i Andrej Srebotnjak</p>
+            </div>
+
+            <div class="biografija-content">
+                <div class="dot"></div>
+                <a href="./assets/Vuk-kao-sakupljac-narodnih-umotvorina.jpg" download>
+                    <p>Vuk kao sakupljac narodnih umotvorina, radili: Jovana Radjenovic, Jelena Prokic, Matija Plemic i Andrej Srebotnjak</p>
             </div>
         </div>
     </body>
