--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <a href="./Vuk-kao-leksikograf.html"><img src="./assets/slika2.png" class="image-meni"></a>
                 </div>
                 <div class="image-box">
-                    <h3>Vuk kao sakuplaj narodnih umotvorina</h3>
+                    <h3>Vuk kao sakupljac narodnih umotvorina</h3>
                     <a href="./Vuk-kao-sakupljac-narodnih-umotvorina.html"><img src="./assets/slika3.png" class="image-meni"></a>
                 </div>
                 <div class="image-box">
