--- a/Vuk-kao-leksikograf.html
+++ b/Vuk-kao-leksikograf.html
@@ -64,5 +64,24 @@
         <div class="seperator">
             <div class="line1"></div>
         </div>
+
+        <div class="okvir">
+            <h2>Druge teme</h2>
+            
+            <div class="meni">
+                <div class="image-box">
+                    <h3>Biografija</h3>
+                    <a href="./index.html"><img src="./assets/slika1.png" class="image-meni"></a>
+                </div>
+                <div class="image-box">
+                    <h3>Vuk kao sakupljac narodnih umotvorina</h3>
+                    <a href="./Vuk-kao-sakupljac-narodnih-umotvorina.html"><img src="./assets/slika3.png" class="image-meni"></a>
+                </div>
+                <div class="image-box">
+                    <h3>Vuk kao pisac i istorijograf</h3>
+                    <a href="./Vuk-kao-pisac-i-istorijograf.html"><img src="./assets/slika4.png" class="image-meni"></a>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
