popravljanje teksta i boja

--- a/Vuk-kao-pisac-i-istorijograf.html
+++ b/Vuk-kao-pisac-i-istorijograf.html
@@ -14,7 +14,7 @@
             <div class="line1"></div>
         </div>
         
-        <h1>Vuk Stefanović Karadžić</h1>
+        <h1>Вук Стефановић Караџић</h1>
 
         <div class="okvir">
             <h2>Prvi Rjecnik</h2>
@@ -66,19 +66,19 @@
         </div>
 
         <div class="okvir">
-            <h2>Druge teme</h2>
+            <h2>Друге теме</h2>
             
             <div class="meni">
                 <div class="image-box">
-                    <h3>Biografija</h3>
+                    <h3>Биографија</h3>
                     <a href="./index.html"><img src="./assets/slika1.png" class="image-meni"></a>
                 </div>
                 <div class="image-box">
-                    <h3>Vuk kao sakupljac narodnih umotvorina</h3>
+                    <h3>Вук као сакупљач народних умотворина</h3>
                     <a href="./Vuk-kao-leksikograf.html"><img src="./assets/slika2.png" class="image-meni"></a>
                 </div>
                 <div class="image-box">
-                    <h3>Vuk kao pisac i istorijograf</h3>
+                    <h3>Вук као писац и историограф</h3>
                     <a href="./Vuk-kao-sakupljac-narodnih-umotvorina.html"><img src="./assets/slika3.png" class="image-meni"></a>
                 </div>
             </div>
